@@ -1468,6 +1468,7 @@ Command : EXPORT\n\r\
 Usage   : EXPORT (AREA/ROOM/WORLD) (DATA/ITEMS/MOBS/WEAPONS/ARMOR) ([FILE]/SCREEN/EMAIL)\n\r\
 Usage   : EXPORT (CATALOG) (DATA/ITEMS/MOBS/WEAPONS/ARMOR) ([FILE]/SCREEN/EMAIL)\n\r\
 Usage   : EXPORT (PLAYER/PLAYERS) (DATA/ITEMS/MOBS/WEAPONS/ARMOR) ([FILE]/SCREEN/EMAIL)\n\r\
+Usage   : EXPORT (CLASS/RACE/ABILITY) (DATA/[ID]) ([FILE]/SCREEN/EMAIL)\n\r\
 Example : export room myroom\n\r\
 Example : export area /home/users/myarea\n\r\
 Example : export area weapons /home/users/myarea\n\r\
